[gd_scene load_steps=69 format=2]

[ext_resource path="res://LizardGame/Sprites/Player/24x64_WALK_Sheet.png" type="Texture" id=1]
[ext_resource path="res://LizardGame/World/Player/LizardPlayer.gd" type="Script" id=2]
[ext_resource path="res://LizardGame/Sprites/Player/24x64_IDLE_Sheet.png" type="Texture" id=3]
[ext_resource path="res://LizardGame/Sprites/Player/24x64_TONGUE_Sheet.png" type="Texture" id=4]
[ext_resource path="res://LizardGame/Sounds/Player/WalkSound.wav" type="AudioStream" id=5]
[ext_resource path="res://LizardGame/Sounds/Player/TongueSound.wav" type="AudioStream" id=6]
[ext_resource path="res://LizardGame/World/Player/Effects/DustDashParticles.tscn" type="PackedScene" id=7]
[ext_resource path="res://LizardGame/World/Player/Effects/GhostEffect.tscn" type="PackedScene" id=8]
[ext_resource path="res://LizardGame/Sounds/Player/Dash.wav" type="AudioStream" id=9]
[ext_resource path="res://LizardGame/Sprites/Player/24x96_EATING_Sheet.png" type="Texture" id=10]
[ext_resource path="res://LizardGame/Sounds/Player/Shoot.wav" type="AudioStream" id=11]
[ext_resource path="res://LizardGame/World/Bullets/PlayerBullet.tscn" type="PackedScene" id=12]
[ext_resource path="res://LizardGame/World/Player/Effects/BloodParticles.tscn" type="PackedScene" id=13]
[ext_resource path="res://LizardGame/Sounds/Bullet/BulletHit.wav" type="AudioStream" id=14]

[sub_resource type="Shader" id=15]
code = "shader_type canvas_item;

uniform bool whiten = false;
uniform float mix_weight = 0.7;

void fragment() {
	vec4 texture_color = texture(TEXTURE, UV);
	if (whiten) {
		vec3 white = vec3(1,1,1);
		vec3 whitened_texture_rgb = mix(texture_color.rgb, white, mix_weight);
		COLOR = vec4(whitened_texture_rgb, texture_color.a);
	} else {
		COLOR = texture_color
	}
}"

[sub_resource type="ShaderMaterial" id=16]
shader = SubResource( 15 )
shader_param/whiten = false
shader_param/mix_weight = 0.7

[sub_resource type="Shader" id=17]
code = "shader_type canvas_item;

uniform bool whiten = false;
uniform float mix_weight = 0.7;

void fragment() {
	vec4 texture_color = texture(TEXTURE, UV);
	if (whiten) {
		vec3 white = vec3(1,1,1);
		vec3 whitened_texture_rgb = mix(texture_color.rgb, white, mix_weight);
		COLOR = vec4(whitened_texture_rgb, texture_color.a);
	} else {
		COLOR = texture_color
	}
}"

[sub_resource type="ShaderMaterial" id=18]
shader = SubResource( 17 )
shader_param/whiten = false
shader_param/mix_weight = 0.7

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 88, 24 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 10 )
region = Rect2( 0, 24, 88, 24 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 10 )
region = Rect2( 0, 48, 88, 24 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 10 )
region = Rect2( 0, 72, 88, 24 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 64, 24 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 64, 24 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 64, 24 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 3 )
region = Rect2( 192, 0, 64, 24 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 3 )
region = Rect2( 256, 0, 64, 24 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 3 )
region = Rect2( 320, 0, 64, 24 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 3 )
region = Rect2( 384, 0, 64, 24 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 3 )
region = Rect2( 448, 0, 64, 24 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 3 )
region = Rect2( 512, 0, 64, 24 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 3 )
region = Rect2( 576, 0, 64, 24 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 3 )
region = Rect2( 640, 0, 64, 24 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 3 )
region = Rect2( 704, 0, 64, 24 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 3 )
region = Rect2( 768, 0, 64, 24 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 3 )
region = Rect2( 832, 0, 64, 24 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 3 )
region = Rect2( 896, 0, 64, 24 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 3 )
region = Rect2( 960, 0, 64, 24 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 64, 24 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 64, 24 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 4 )
region = Rect2( 128, 0, 64, 24 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 4 )
region = Rect2( 192, 0, 64, 24 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 4 )
region = Rect2( 256, 0, 64, 24 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 4 )
region = Rect2( 320, 0, 64, 24 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 4 )
region = Rect2( 384, 0, 64, 24 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 4 )
region = Rect2( 448, 0, 64, 24 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 24 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 64, 24 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 64, 24 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 64, 24 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ) ],
"loop": false,
"name": "EAT",
"speed": 12.0
}, {
"frames": [ SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ) ],
"loop": true,
"name": "IDLE",
"speed": 12.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": false,
"name": "TONGUE",
"speed": 12.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "WALK",
"speed": 12.0
} ]

[sub_resource type="Gradient" id=23]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0.823529 )

[sub_resource type="GradientTexture" id=24]
gradient = SubResource( 23 )

[sub_resource type="ParticlesMaterial" id=19]
emission_shape = 1
emission_sphere_radius = 2.0
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 15.0
initial_velocity_random = 0.2
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 1.6
scale_random = 1.0
color = Color( 0.431373, 0.298039, 0.188235, 1 )
color_ramp = SubResource( 24 )

[sub_resource type="Gradient" id=21]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0.823529 )

[sub_resource type="GradientTexture" id=22]
gradient = SubResource( 21 )

[sub_resource type="ParticlesMaterial" id=20]
emission_shape = 1
emission_sphere_radius = 2.0
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 15.0
initial_velocity_random = 0.2
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 1.6
scale_random = 1.0
color = Color( 0.431373, 0.298039, 0.188235, 1 )
color_ramp = SubResource( 22 )

[sub_resource type="Curve" id=26]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=27]
curve = SubResource( 26 )

[sub_resource type="Gradient" id=29]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=30]
gradient = SubResource( 29 )

[sub_resource type="ParticlesMaterial" id=57]
lifetime_randomness = 0.7
emission_shape = 1
emission_sphere_radius = 6.0
flag_disable_z = true
direction = Vector3( -1, 0, 0 )
spread = 30.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 35.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 360.0
angle_random = 0.15
scale = 0.8
scale_random = 1.0
color_ramp = SubResource( 30 )
anim_speed = 1.0
anim_speed_curve = SubResource( 27 )

[sub_resource type="Gradient" id=52]
offsets = PoolRealArray( 0.00645161, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0.392157 )

[sub_resource type="GradientTexture" id=53]
gradient = SubResource( 52 )

[sub_resource type="Curve" id=54]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=55]
curve = SubResource( 54 )

[sub_resource type="ParticlesMaterial" id=56]
emission_shape = 1
emission_sphere_radius = 2.0
flag_disable_z = true
spread = 30.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 50.0
initial_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = -10.0
linear_accel_random = 1.0
radial_accel_random = 1.0
scale = 2.0
scale_random = 0.5
scale_curve = SubResource( 55 )
color = Color( 0.211765, 0.772549, 0.956863, 1 )
color_ramp = SubResource( 53 )

[sub_resource type="RectangleShape2D" id=31]
extents = Vector2( 10, 2 )

[node name="LizardPlayer" type="KinematicBody2D"]
material = SubResource( 16 )
z_as_relative = false
collision_layer = 2
script = ExtResource( 2 )
mGhosteffect = ExtResource( 8 )
mBloodeffect = ExtResource( 13 )
mBullet = ExtResource( 12 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 18 )
frames = SubResource( 2 )
animation = "IDLE"

[node name="WalkSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -7.0
bus = "Sounds"

[node name="TongueSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -6.0
bus = "Sounds"

[node name="DashSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -15.0
bus = "Sounds"

[node name="BulletSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -10.0
bus = "Sounds"

[node name="HitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )
volume_db = -10.0
bus = "Sounds"

[node name="DashTimer" type="Timer" parent="."]
one_shot = true

[node name="GhostTimer" type="Timer" parent="."]
wait_time = 0.03

[node name="BulletTimer" type="Timer" parent="."]
one_shot = true

[node name="CanBeHitTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="BlinkTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="LeftPawParticles" type="Particles2D" parent="."]
show_behind_parent = true
position = Vector2( -13, -4 )
emitting = false
amount = 4
lifetime = 0.3
one_shot = true
explosiveness = 0.8
local_coords = false
process_material = SubResource( 19 )

[node name="RightPawParticles" type="Particles2D" parent="."]
show_behind_parent = true
position = Vector2( -13, 4 )
emitting = false
amount = 4
lifetime = 0.3
one_shot = true
explosiveness = 0.8
local_coords = false
process_material = SubResource( 20 )

[node name="DustDashParticles" parent="." instance=ExtResource( 7 )]
process_material = SubResource( 57 )

[node name="BulletEmitter" type="Position2D" parent="."]
position = Vector2( 14, 0 )

[node name="SpitParticles" type="Particles2D" parent="."]
modulate = Color( 1.6, 1.6, 1.6, 1 )
position = Vector2( 16, 0 )
z_index = 40
z_as_relative = false
emitting = false
amount = 24
lifetime = 0.6
one_shot = true
explosiveness = 1.0
process_material = SubResource( 56 )

[node name="LizardBodyCollision" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PoolVector2Array( -8, -1, -3, -3, 5, -3, 12, -1, 12, 1, 5, 3, -3, 3, -8, 1 )

[node name="TongueHitBox" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="TongueHitBox"]
position = Vector2( 23, 0 )
shape = SubResource( 31 )
disabled = true

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 44

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="HurtBox"]
visible = false
polygon = PoolVector2Array( -8, -1, -3, -3, 5, -3, 12, -1, 12, 1, 5, 3, -3, 3, -8, 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite" to="." method="_on_AnimatedSprite_frame_changed"]
[connection signal="timeout" from="DashTimer" to="." method="_on_DashTimer_timeout"]
[connection signal="timeout" from="GhostTimer" to="." method="_on_GhostTimer_timeout"]
[connection signal="timeout" from="BulletTimer" to="." method="_on_BulletTimer_timeout"]
[connection signal="timeout" from="CanBeHitTimer" to="." method="_on_CanBeHitTimer_timeout"]
[connection signal="timeout" from="BlinkTimer" to="." method="_on_BlinkTimer_timeout"]
[connection signal="area_entered" from="TongueHitBox" to="." method="_on_TongueHitBox_area_entered"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="area_exited" from="HurtBox" to="." method="_on_HurtBox_area_exited"]
